# esp-hal

.github/workflows/: ci.yml  ci_nightly.yml
esp-backtrace/: Cargo.toml  README.md
esp-backtrace/src/: lib.rs
esp-bootloader-esp-idf/: Cargo.toml
esp-hal/: Cargo.toml  README.md  build.rs  esp_config.yml
esp-hal-common/: Cargo.toml  build.rs
esp-hal-common/devices/esp32p4/: device.toml
esp-hal-common/ld/esp32p4/: esp32p4.x
esp-hal-common/src/: gpio.rs  lib.rs  prelude.rs  spi.rs  system.rs
esp-hal-common/src/analog/: mod.rs
esp-hal-common/src/clock/: mod.rs
esp-hal-common/src/interrupt/: riscv.rs
esp-hal-common/src/rtc_cntl/: mod.rs
esp-hal-embassy/: Cargo.toml
esp-hal-procmacros/: Cargo.toml
esp-hal-procmacros/src/: lib.rs
esp-hal/ld/esp32c5/: esp32c5.x  memory.x
esp-hal/src/: debugger.rs  lib.rs  parl_io.rs  peripheral.rs  peripherals.rs  prelude.rs  rmt.rs  system.rs  time.rs  uart.rs  usb_serial_jtag.rs
esp-metadata-generated/: Cargo.toml
esp-metadata-generated/src/: _build_script_utils.rs  _generated_esp32c5.rs  lib.rs
esp-metadata/devices/: esp32c5.toml
esp-metadata/src/: lib.rs
esp-println/: Cargo.toml  README.md  build.rs
esp-println/src/: lib.rs
esp-radio/: Cargo.toml
esp-rom-sys/: Cargo.toml
esp32c6-hal/: Cargo.toml
esp32c6-hal/examples/: clock_monitor.rs  rtc_watchdog.rs
esp32c6-hal/ld/: db-riscv-link.x
esp32c6-hal/src/: lib.rs
esp32p4-hal/: Cargo.toml
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
(+28 files in other folders)
